--- a/generate_password.html
+++ b/generate_password.html
@@ -20,12 +20,7 @@
                 <div class="card">
                     <div class="card-header">
                         <div class="form-row">
-                            <div class="col">Generate password v.0.1</div>
-                            <div class="col-auto float-right">
-                                <button class="btn btn-outline-info" data-toggle="modal"
-                                    data-target="#modal-about">About
-                                    Me</button>
-                            </div>
+                            <div class="col">Generate password v.0.2</div>
                         </div>
 
                     </div>
@@ -33,11 +28,23 @@
 
 
                         <div class="form-row">
-                            <div class="col-xl-8">
-                                <input type="text" class="form-control" name="result">
+                            <div class="col-xl-6 mb-3">
+                                <div class="form-row">
+                                    <div class="col-6 mb-3">
+                                        <label for="create">Create</label>
+                                        <input type="text" class="form-control" name="create" id="create" value="100">
+                                    </div>
+                                    <div class="col-6 mb-3">
+                                        <label for="lengths">Password length</label>
+                                        <input type="text" class="form-control" name="length" id="length"
+                                            placeholder="Length" value="12">
+                                    </div>
+                                </div>
+
                             </div>
-                            <div class="col-xl-4">
-                                <input type="text" class="form-control" name="length" placeholder="Length" value="10">
+                            <div class="col-xl-6  mb-3">
+                                <textarea name="results" class="form-control" id="results" placeholder="Results"
+                                    cols="30" rows="12" readonly></textarea>
                             </div>
                         </div>
 
@@ -60,20 +67,41 @@
         init: function () {
             this.form();
         },
-        random: (length = 10) => {
+        random: (length = 12) => {
             let characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
-            let charactersLength = characters.length;
+            let symbol = '@#!%&';
             let result = '';
             for (let i = 0; i < length; i++) {
-                result += characters.charAt(Math.floor(Math.random() * charactersLength));
+                result += characters.charAt(Math.floor(Math.random() * characters.length));
+                if (i > 3) {
+                    if (i > 4) {
+                        result += symbol.charAt(Math.floor(Math.random() * symbol.length));
+                        i++;
+                    } else {
+                        result += symbol.charAt(Math.floor(Math.random() * symbol.length));
+                        i++;
+                    }
+
+                }
             }
             return result;
         },
 
         form: () => {
+
             $(`form`).on('submit', function (e) {
                 e.preventDefault();
-                $(this).find(`[name="result"]`).val(KSgenerate.random($(this).find(`[name="length"]`).val()?? 10 ));
+                let create = $(this).find(`[name="create"]`).val();
+                let length = $(this).find(`[name="length"]`).val();
+                let results = '';
+                if (create) {
+                    for (let index = 0; index < create; index++) {
+                        results += KSgenerate.random(length ? length : 12) + '\n';
+                    }
+                    $(this).find(`[name="results"]`).val(results);
+                }
+
+
             });
         }
 
